# settle-it-api

./: .buildpacks  .gitignore  README.md  mix.exs
config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
lib/: settle_it.ex  settle_it_web.ex
lib/settle_it/: application.ex  game_server.ex  game_server_supervisor.ex  game_supervisor.ex  games.ex  players.ex  repo.ex  teams.ex
lib/settle_it/game_server/: engine.ex  notifications_dispatcher.ex  physics.ex  physics_simulator.ex  registry.ex  state_producer.ex
lib/settle_it/games/: game.ex  state.ex
lib/settle_it/players/: player.ex
lib/settle_it/teams/: member.ex  team.ex
lib/settle_it_web/: endpoint.ex  gettext.ex  router.ex
lib/settle_it_web/channels/: game_channel.ex  user_socket.ex
lib/settle_it_web/controllers/: fallback_controller.ex  game_controller.ex  member_controller.ex  player_controller.ex  team_controller.ex
lib/settle_it_web/views/: changeset_view.ex  error_helpers.ex  error_view.ex  game_view.ex  member_view.ex  player_view.ex  team_view.ex
native/physics/: Cargo.toml  README.md
native/physics/src/: body.rs  game.rs  init.rs  lib.rs  physics_world.rs  user_input.rs  util.rs
priv/repo/: seeds.exs
priv/repo/migrations/: 20200906215722_create_players.exs  20200906215814_create_games.exs  20200906220937_create_teams.exs  20200906221100_create_team_members.exs
test/: test_helper.exs
test/settle_it/: games_test.exs  players_test.exs  teams_test.exs
test/settle_it/game_server/: engine_test.exs
test/support/: channel_case.ex  conn_case.ex  data_case.ex
(+15 files in other folders)
