[package]
name = "physics"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "physics"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.35.0"
lazy_static = "1.0"
rapier3d = { version = "0.22.0"}
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1"
serde_rustler = "0.1.0"
crossbeam = "0.8"
uuid = { version = "0.8", features = ["v4"] }
rand = "0.8"

[[bin]]
name = "physics"
path = "src/lib.rs"